--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,196 @@
 .header {
-  padding: 20px 0;
+  padding: 25px 0;
 }
 
-.nav-list {
+.header > .container {
+  max-width: 1200px;
+}
+
+.logo {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+  gap: 4px;
+
+  font-style: italic;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.29;
+
+  letter-spacing: -0.03em;
+  color: #111111;
 }
 
-.nav-link {
+.mobile-menu-icon {
+  fill: none;
+  stroke: #ffffff;
+}
+
+.logo-icon {
+  width: 21px;
+  height: 21px;
+}
+
+.open-menu-btn {
+  display: flex;
+  align-items: center;
+
+  width: 28px;
+  height: 28px;
+
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.header-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu-nav {
+  display: none;
+}
+.header-icons-list {
+  display: none;
+}
+
+/* Mobile menu */
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 20px;
+  padding-left: 20px;
+
+  background-color: #1e1823;
+
+  transition: transform 300ms cubic-bezier(0.39, 0.575, 0.565, 1);
+  transform: translateX(100%);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+
+.close-menu-btn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  color: #ffffff;
+  transition: color 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+.close-menu-btn:is(:hover, :focus) {
+  color: #fd9222;
+}
+
+.mobile-menu-nav {
+  padding-left: 30px;
+  padding-top: 136px;
+}
+
+.mobile-menu-nav-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.mobile-menu-link {
   font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
+  font-size: 14px;
+  line-height: 1.14;
+
+  letter-spacing: -0.02em;
+  color: #ffffff;
+
+  transition: color 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+.mobile-menu-link:is(:hover, :focus) {
+  color: #fd9222;
+}
+
+.mobile-icons-list {
+  display: flex;
+  gap: 18px;
+}
+
+.mobile-icon-link {
+  display: flex;
+}
+
+.mobile-icon-link:is(:hover, :focus) .mobile-menu-icon {
+  stroke: #fd9222;
+}
+
+/* desktop */
+
+@media screen and (min-width: 1200px) {
+  .open-menu-btn {
+    display: none;
+  }
+
+  .logo {
+    font-size: 18px;
+    line-height: 1.11;
+  }
+
+  .logo-icon {
+    width: 24px;
+    height: 24px;
+  }
+
+  .menu-nav {
+    display: block;
+  }
+
+  .header-icons-list {
+    display: flex;
+    gap: 20px;
+  }
+
+  .menu-nav-list {
+    display: flex;
+    gap: 24px;
+  }
+
+  .header-icon {
+    stroke: #111111;
+    fill: none;
+
+    transition: stroke 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  }
+
+  .header-icon-link {
+    display: flex;
+  }
+
+  .header-icon-link:is(:hover, :focus) .header-icon {
+    stroke: #fd9222;
+  }
+
+  .menu-link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+
+    letter-spacing: -0.02em;
+
+    transition: color 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  }
+
+  .menu-link:is(:hover, :focus) {
+    color: #fd9222;
+  }
 }
