--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -22,6 +22,7 @@ ul {
 a {
   color: currentColor;
   text-decoration: none;
+  transition: 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
 button {
