--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
   |============================
 */
 @import url('./reset.css');
+@import url('./base.css');
 @import url('./components.css');
 @import url('./header.css');
 @import url('./hero.css');
@@ -14,48 +15,6 @@
 @import url('./our-products.css');
 @import url('./top-sellers.css');
 @import url('./subscribe.css');
+@import url('./reviews.css');
+
 @import url('./footer.css');
-
-:root {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-
-  color: #111111;
-  background-color: #fafafa;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: 'Montserrat', sans-serif;
-}
-
-.container {
-  max-width: 375px;
-  margin: 0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding-left: 32px;
-    padding-right: 32px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .container {
-    max-width: 1200px;
-  }
-} ;
