--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -7,6 +7,7 @@
     <div class="how-thumb">
       <div>
         <iframe
+          loading="lazy"
           class="iframe"
           src="https://www.youtube.com/embed/J65d3aSkFwM"
           title="Шоколад | Как это устроено | Discovery"
