--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -1,5 +1,79 @@
 <section class="products" id="products">
   <div class="container">
-    <h2>Our products</h2>
+    <h2 class="primary-title">Our <span>products</span></h2>
+
+    <!-- Slider main container -->
+    <div class="swiper swiper-products">
+      <!-- Additional required wrapper -->
+      <div class="swiper-wrapper">
+        <!-- Slides -->
+        <div class="swiper-slide prod-slide">
+          <img src="/img/orange.png" alt="" loading="lazy" />
+          <div>
+            <h3 class="choco-name">orange</h3>
+            <p class="choco-type">Dark chocolate</p>
+            <p class="choco-price">45 UAH</p>
+          </div>
+        </div>
+        <div class="swiper-slide prod-slide">
+          <img src="/img/apple-cranberry.png" alt="" loading="lazy" />
+          <div>
+            <h3 class="choco-name">APPLE&CRANBERRY</h3>
+            <p class="choco-type">Milk chocolate</p>
+            <p class="choco-price">50 UAH</p>
+          </div>
+        </div>
+        <div class="swiper-slide prod-slide">
+          <img src="/img/lime-sea.png" alt="" loading="lazy" />
+          <div>
+            <h3 class="choco-name">lime&sea salt</h3>
+            <p class="choco-type">Dark chocolate</p>
+            <p class="choco-price">66 UAH</p>
+          </div>
+        </div>
+        <div class="swiper-slide prod-slide">
+          <img src="/img/pineapple.png" alt="" loading="lazy" />
+          <div>
+            <h3 class="choco-name">pineapple</h3>
+            <p class="choco-type">Dark chocolate</p>
+            <p class="choco-price">54 UAH</p>
+          </div>
+        </div>
+        <div class="swiper-slide prod-slide">
+          <img src="/img/classic.png" alt="" loading="lazy" />
+          <div>
+            <h3 class="choco-name">Classic</h3>
+            <p class="choco-type">Milk chocolate</p>
+            <p class="choco-price">45 UAH</p>
+          </div>
+        </div>
+        <div class="swiper-slide prod-slide">
+          <img src="/img/honey.png" alt="" loading="lazy" />
+          <div>
+            <h3 class="choco-name">honey</h3>
+            <p class="choco-type">Milk chocolate</p>
+            <p class="choco-price">50 UAH</p>
+          </div>
+        </div>
+        <div class="swiper-slide prod-slide">
+          <img src="/img/roasted.png" alt="" loading="lazy" />
+          <div>
+            <h3 class="choco-name">Roasted fruits</h3>
+            <p class="choco-type">Dark chocolate</p>
+            <p class="choco-price">66 UAH</p>
+          </div>
+        </div>
+        <div class="swiper-slide prod-slide">
+          <img src="/img/classic-white.png" alt="" loading="lazy" />
+          <div>
+            <h3 class="choco-name">Classic</h3>
+            <p class="choco-type">White chocolate</p>
+            <p class="choco-price">54 UAH</p>
+          </div>
+        </div>
+      </div>
+      <!-- If we need pagination -->
+      <div class="swiper-pagination"></div>
+    </div>
   </div>
 </section>
