--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -11,7 +11,10 @@
           <source media="(min-width: 768px)" srcset="/img/seller-one-tab.jpg" />
           <source media="(min-width: 375px)" srcset="/img/seller-one-mob.jpg" />
 
-          <img src="/img/seller-one-mob.jpg" alt=""
+          <img
+            src="/img/seller-one-mob.jpg"
+            loading="lazy"
+            alt="chocolate with coffee and nuts"
         /></picture>
 
         <p class="seller-desk">
@@ -28,7 +31,10 @@
           <source media="(min-width: 768px)" srcset="/img/seller-two-tab.jpg" />
           <source media="(min-width: 375px)" srcset="/img/seller-two-mob.jpg" />
 
-          <img src="/img/seller-two-mob.jpg" alt=""
+          <img
+            src="/img/seller-two-mob.jpg"
+            loading="lazy"
+            alt="chocolate with nuts and caramel"
         /></picture>
       </li>
       <li class="seller-item">
@@ -37,7 +43,10 @@
             media="(min-width: 1200px)"
             srcset="/img/seller-three-desk.jpg" />
 
-          <img src="/img/seller-three-desk.jpg" alt=""
+          <img
+            src="/img/seller-three-desk.jpg"
+            loading="lazy"
+            alt="dark chocolate"
         /></picture>
       </li>
     </ul>
