--- a/src/partials/unique.html
+++ b/src/partials/unique.html
@@ -22,7 +22,12 @@
               media="(min-width: 375px )"
               srcset="/img/choco-plate-mob.png"
             />
-            <img src="/img/choco-plate-mob.png" alt="choco" width="264" />
+            <img
+              src="/img/choco-plate-mob.png"
+              alt="chocolate"
+              width="264"
+              loading="lazy"
+            />
           </picture>
 
           <p>MILK CHOCOLATE</p>
@@ -52,7 +57,7 @@
           <picture>
             <source media="(min-width: 1200px )" srcset="/img/milk-desk.png" />
             <source media="(min-width: 375px )" srcset="/img/milk-mob.png" />
-            <img src="/img/milk-mob.png" alt="choco" width="264"
+            <img src="/img/milk-mob.png" alt="milk" width="264" loading="lazy"
           /></picture>
 
           <p>MILK</p>
@@ -82,7 +87,7 @@
           <picture>
             <source media="(min-width: 1200px )" srcset="/img/nuts-desc.png" />
             <source media="(min-width: 375px )" srcset="/img/nuts-mob.png" />
-            <img src="/img/nuts-mob.png" alt="choco" width="264"
+            <img src="/img/nuts-mob.png" alt="nuts" width="264" loading="lazy"
           /></picture>
 
           <p>NUTS</p>
@@ -112,7 +117,11 @@
           <picture>
             <source media="(min-width: 1200px )" srcset="/img/choco-desk.png" />
             <source media="(min-width: 375px )" srcset="/img/choco-mob.png" />
-            <img src="/img/choco-mob.png" alt="choco" width="264"
+            <img
+              src="/img/choco-mob.png"
+              alt="chocolate beans"
+              width="264"
+              loading="lazy"
           /></picture>
 
           <p>SEMI-SWEET CHOCOLATE</p>
