--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -1,3 +1,66 @@
 .products {
   padding-bottom: 72px;
 }
+
+.swiper-products {
+  padding-bottom: 52px;
+}
+
+.swiper-pagination-bullet {
+  width: 13px;
+  height: 13px;
+}
+
+.swiper-pagination-bullet-active {
+  width: 28px;
+  border-radius: 13px;
+  background: #fd9222;
+}
+
+.prod-slide {
+  background-color: #ffffff;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 15px;
+  padding: 32px 52px;
+  text-align: center;
+}
+
+.prod-slide img {
+  margin-bottom: 8px;
+}
+
+.choco-name {
+  margin-bottom: 2px;
+
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.33;
+
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+}
+.choco-type {
+  margin-bottom: 18px;
+
+  font-size: 12px;
+  line-height: 1.17;
+
+  letter-spacing: -0.02em;
+
+  color: rgba(17, 17, 17, 0.7);
+}
+.choco-price {
+  display: inline;
+  padding: 8px 20px;
+
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+
+  background: #fafafa;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 100px;
+}
+
+@media screen and (min-width: 768px) {
+}
