--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,3 +1,92 @@
+/* montserrat-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/montserrat-v25-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/montserrat-v25-latin-regular.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/montserrat-v25-latin-regular.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../fonts/montserrat-v25-latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../fonts/montserrat-v25-latin-regular.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/montserrat-v25-latin-regular.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-500 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/montserrat-v25-latin-500.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/montserrat-v25-latin-500.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/montserrat-v25-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/montserrat-v25-latin-500.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/montserrat-v25-latin-500.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/montserrat-v25-latin-500.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/montserrat-v25-latin-700.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/montserrat-v25-latin-700.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/montserrat-v25-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/montserrat-v25-latin-700.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/montserrat-v25-latin-700.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/montserrat-v25-latin-700.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-800 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 800;
+  src: url('../fonts/montserrat-v25-latin-800.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/montserrat-v25-latin-800.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/montserrat-v25-latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/montserrat-v25-latin-800.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/montserrat-v25-latin-800.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/montserrat-v25-latin-800.svg#Montserrat') format('svg'); /* Legacy iOS */
+}
+/* montserrat-800italic - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Montserrat';
+  font-style: italic;
+  font-weight: 800;
+  src: url('../fonts/montserrat-v25-latin-800italic.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/montserrat-v25-latin-800italic.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/montserrat-v25-latin-800italic.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../fonts/montserrat-v25-latin-800italic.woff') format('woff'),
+    /* Modern Browsers */ url('../fonts/montserrat-v25-latin-800italic.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/montserrat-v25-latin-800italic.svg#Montserrat')
+      format('svg'); /* Legacy iOS */
+}
+
 :root {
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
