--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,7 +9,13 @@
       <div class="hero-thumb">
         <ul class="hero-btn-list">
           <li>
-            <button type="button" class="primary-btn hero-btn">Buy now</button>
+            <button
+              type="button"
+              class="primary-btn hero-btn js-open-modal"
+              data-modal="1"
+            >
+              Buy now
+            </button>
           </li>
           <li>
             <button type="button" class="primary-btn buy hero-btn">
@@ -26,6 +32,52 @@
           ></span>
         </a>
       </div>
+    </div>
+
+    <div class="modal modal-buy" data-modal="1">
+      <button type="button" class="close-modal-btn js-modal-close">
+        <svg width="28" height="28">
+          <use href="/img/icons.svg#icon-x-close"></use>
+        </svg>
+      </button>
+
+      <h3 class="primary-title"><span>bUY</span> nOW</h3>
+
+      <form class="form-buy">
+        <div>
+          <p class="buy-label">Personal information</p>
+          <label
+            ><input type="text" placeholder="Name" class="input-name"
+          /></label>
+          <label><input type="text" placeholder="Surname" /></label>
+        </div>
+
+        <div>
+          <p class="buy-label">Email</p>
+          <label><input type="email" placeholder="Enter your email" /></label>
+        </div>
+
+        <div>
+          <p class="buy-label">Phone number</p>
+          <label><input type="tel" placeholder="Phone number" /></label>
+        </div>
+
+        <div>
+          <p class="buy-label">Card number</p>
+          <label><input type="text" placeholder="Enter card" /></label>
+        </div>
+
+        <div>
+          <p class="buy-label">Comment</p>
+          <label>
+            <textarea type="tel" placeholder="Enter text"></textarea>
+          </label>
+        </div>
+
+        <button type="submit" class="primary-btn js-open-modal" data-modal="2">
+          Submit
+        </button>
+      </form>
     </div>
   </div>
 </section>
