--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 */
 @import url('./reset.css');
 @import url('./base.css');
+@import url('./overlay.css');
 @import url('./components.css');
 @import url('./header.css');
 @import url('./hero.css');
@@ -16,5 +17,6 @@
 @import url('./top-sellers.css');
 @import url('./subscribe.css');
 @import url('./reviews.css');
+@import url('./pop-up.css');
 
 @import url('./footer.css');
