--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -8,7 +8,16 @@
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide prod-slide">
-          <img src="/img/orange.png" alt="" loading="lazy" />
+          <picture>
+            <source srcset="/img/orange.webp 1x, /img/orange.webp 2x" />
+            <img
+              src="/img/orange.webp"
+              alt="orange chocolate"
+              loading="lazy"
+              width="230"
+            />
+          </picture>
+
           <div>
             <h3 class="choco-name">orange</h3>
             <p class="choco-type">Dark chocolate</p>
@@ -16,7 +25,21 @@
           </div>
         </div>
         <div class="swiper-slide prod-slide">
-          <img src="/img/apple-cranberry.png" alt="" loading="lazy" />
+          <picture>
+            <source
+              srcset="
+                /img/apple-cranberry.webp 1x,
+                /img/apple-cranberry.webp 2x
+              "
+            />
+            <img
+              src="/img/apple-cranberry.webp"
+              alt="apple-cranberry chocolate"
+              loading="lazy"
+              width="230"
+            />
+          </picture>
+
           <div>
             <h3 class="choco-name">APPLE&CRANBERRY</h3>
             <p class="choco-type">Milk chocolate</p>
@@ -24,7 +47,16 @@
           </div>
         </div>
         <div class="swiper-slide prod-slide">
-          <img src="/img/lime-sea.png" alt="" loading="lazy" />
+          <picture>
+            <source srcset="/img/lime-sea.webp 1x, /img/lime-sea.webp 2x" />
+            <img
+              src="/img/lime-sea.webp"
+              alt="lime-sea chocolate"
+              loading="lazy"
+              width="230"
+            />
+          </picture>
+
           <div>
             <h3 class="choco-name">lime&sea salt</h3>
             <p class="choco-type">Dark chocolate</p>
@@ -32,7 +64,16 @@
           </div>
         </div>
         <div class="swiper-slide prod-slide">
-          <img src="/img/pineapple.png" alt="" loading="lazy" />
+          <picture>
+            <source srcset="/img/pineapple.webp 1x, /img/pineapple.webp 2x" />
+            <img
+              src="/img/pineapple.webp"
+              alt="pineapple chocolate"
+              loading="lazy"
+              width="230"
+            />
+          </picture>
+
           <div>
             <h3 class="choco-name">pineapple</h3>
             <p class="choco-type">Dark chocolate</p>
@@ -40,7 +81,16 @@
           </div>
         </div>
         <div class="swiper-slide prod-slide">
-          <img src="/img/classic.png" alt="" loading="lazy" />
+          <picture>
+            <source srcset="/img/classic.webp 1x, /img/classic.webp 2x" />
+            <img
+              src="/img/classic.webp"
+              alt="classic chocolate"
+              loading="lazy"
+              width="230"
+            />
+          </picture>
+
           <div>
             <h3 class="choco-name">Classic</h3>
             <p class="choco-type">Milk chocolate</p>
@@ -48,7 +98,16 @@
           </div>
         </div>
         <div class="swiper-slide prod-slide">
-          <img src="/img/honey.png" alt="" loading="lazy" />
+          <picture>
+            <source srcset="/img/honey.webp 1x, /img/honey.webp 2x" />
+            <img
+              src="/img/honey.webp"
+              alt="honey chocolate"
+              loading="lazy"
+              width="230"
+            />
+          </picture>
+
           <div>
             <h3 class="choco-name">honey</h3>
             <p class="choco-type">Milk chocolate</p>
@@ -56,7 +115,15 @@
           </div>
         </div>
         <div class="swiper-slide prod-slide">
-          <img src="/img/roasted.png" alt="" loading="lazy" />
+          <picture>
+            <source srcset="/img/roasted.webp 1x, /img/roasted.webp 2x" />
+            <img
+              src="/img/roasted.webp"
+              alt="roasted chocolate"
+              loading="lazy"
+              width="230"
+            />
+          </picture>
           <div>
             <h3 class="choco-name">Roasted fruits</h3>
             <p class="choco-type">Dark chocolate</p>
@@ -64,7 +131,17 @@
           </div>
         </div>
         <div class="swiper-slide prod-slide">
-          <img src="/img/classic-white.png" alt="" loading="lazy" />
+          <picture>
+            <source
+              srcset="/img/classic-white.webp 1x, /img/classic-white.webp 2x"
+            />
+            <img
+              src="/img/classic-white.webp"
+              alt="classic-white chocolate"
+              loading="lazy"
+              width="230"
+            />
+          </picture>
           <div>
             <h3 class="choco-name">Classic</h3>
             <p class="choco-type">White chocolate</p>
