--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -8,6 +8,12 @@
       work of art that is sure to please.
     </p>
 
-    <button type="button" class="primary-btn subscribe-btn">Subscribe</button>
+    <button
+      type="button"
+      class="primary-btn subscribe-btn js-open-modal"
+      data-modal="3"
+    >
+      Subscribe
+    </button>
   </div>
 </section>
