--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -50,6 +50,12 @@
         /></picture>
       </li>
     </ul>
-    <button class="seller-btn primary-btn" type="button">Buy now</button>
+    <button
+      class="seller-btn primary-btn js-open-modal"
+      type="button"
+      data-modal="1"
+    >
+      Buy now
+    </button>
   </div>
 </section>
