--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -106,6 +106,11 @@
   width: 311px;
   background: #fafafa;
   border-radius: 15px;
+  overflow-y: auto;
+}
+
+.buy-slider {
+  margin-bottom: 32px;
 }
 
 .form-buy {
@@ -128,6 +133,9 @@
   text-align: left;
   color: #000000;
 }
+.modal-buy img {
+  margin: 0 auto;
+}
 
 .modal-buy input,
 .modal-buy textarea {
@@ -145,6 +153,29 @@
   resize: none;
 }
 
+.buyer-slide {
+  padding: 24px 20px 18px;
+  background: #ffffff;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 15px;
+}
+
+.weight {
+  display: inline-block;
+  margin-top: 16px;
+  padding: 8px 27px;
+
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(17 / 14);
+
+  background: #fafafa;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 100px;
+}
+.buy-modal-btn {
+  max-width: 133px;
+}
 @media screen and (min-width: 768px) {
   .hero {
     height: 890px;
@@ -184,6 +215,15 @@
   .icon-wrapper {
     width: 38px;
     height: 38px;
+  }
+
+  .modal-buy {
+    width: 605px;
+    max-width: 605px;
+  }
+
+  .buy-slider {
+    margin-bottom: 40px;
   }
 }
 
