--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -7,9 +7,42 @@
         <picture class="seller-pic">
           <source
             media="(min-width: 1200px)"
-            srcset="/img/seller-one-desk.jpg" />
-          <source media="(min-width: 768px)" srcset="/img/seller-one-tab.jpg" />
-          <source media="(min-width: 375px)" srcset="/img/seller-one-mob.jpg" />
+            srcset="
+              /img/seller-one-deskWeb.webp   1x,
+              /img/seller-one-deskWeb2x.webp 2x
+            "
+            type="image/webp" />
+
+          <source
+            media="(min-width: 1200px)"
+            srcset="/img/seller-one-desk.jpg 1x, /img/seller-one-desk2x.jpg 2x"
+            type="image/jpeg" />
+
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              /img/seller-one-tabWeb.webp   1x,
+              /img/seller-one-tabWeb2x.webp 2x
+            "
+            type="image/webp" />
+
+          <source
+            media="(min-width: 768px)"
+            srcset="/img/seller-one-tab.jpg 1x, /img/seller-one-tab2x.jpg 2x"
+            type="image/jpeg" />
+
+          <source
+            media="(min-width: 375px)"
+            srcset="
+              /img/seller-one-mobWeb.webp   1x,
+              /img/seller-one-mobWeb2x.webp 2x
+            "
+            type="image/webp" />
+
+          <source
+            media="(min-width: 375px)"
+            srcset="/img/seller-one-mob.jpg 1x, /img/seller-one-mob2x.jpg 2x"
+            type="image/jpeg" />
 
           <img
             src="/img/seller-one-mob.jpg"
@@ -27,9 +60,42 @@
         <picture class="seller-pic">
           <source
             media="(min-width: 1200px)"
-            srcset="/img/seller-two-desk.jpg" />
-          <source media="(min-width: 768px)" srcset="/img/seller-two-tab.jpg" />
-          <source media="(min-width: 375px)" srcset="/img/seller-two-mob.jpg" />
+            srcset="
+              /img/seller-two-deskWeb.webp   1x,
+              /img/seller-two-deskWeb2x.webp 2x
+            "
+            type="image/webp" />
+
+          <source
+            media="(min-width: 1200px)"
+            srcset="/img/seller-two-desk.jpg 1x, /img/seller-two-desk2x.jpg 2x"
+            type="image/jpeg" />
+
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              /img/seller-two-tabWeb.webp   1x,
+              /img/seller-two-tabWeb2x.webp 2x
+            "
+            type="image/webp" />
+
+          <source
+            media="(min-width: 768px)"
+            srcset="/img/seller-two-tab.jpg 1x, /img/seller-two-tab2x.jpg 2x"
+            type="image/jpeg" />
+
+          <source
+            media="(min-width: 375px)"
+            srcset="
+              /img/seller-two-mobWeb.webp   1x,
+              /img/seller-two-mobWeb2x.webp 2x
+            "
+            type="image/webp" />
+
+          <source
+            media="(min-width: 375px)"
+            srcset="/img/seller-two-mob.jpg 1x, /img/seller-two-mob2x.jpg 2x"
+            type="image/jpeg" />
 
           <img
             src="/img/seller-two-mob.jpg"
@@ -41,7 +107,19 @@
         <picture class="seller-pic">
           <source
             media="(min-width: 1200px)"
-            srcset="/img/seller-three-desk.jpg" />
+            srcset="
+              /img/seller-three-deskWeb.webp   1x,
+              /img/seller-three-deskWeb2x.webp 2x
+            "
+            type="image/webp" />
+
+          <source
+            media="(min-width: 1200px)"
+            srcset="
+              /img/seller-three-desk.jpg   1x,
+              /img/seller-three-desk2x.jpg 2x
+            "
+            type="image/jpeg" />
 
           <img
             src="/img/seller-three-desk.jpg"
