--- a/src/css/unique.css
+++ b/src/css/unique.css
@@ -129,6 +129,16 @@
   color: #111111;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  .unique-item:nth-child(2) {
+    order: 3;
+  }
+
+  .unique-item:nth-child(3) {
+    order: 4;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .unique-title {
     width: 411px;
