change format img

--- a/src/partials/unique.html
+++ b/src/partials/unique.html
@@ -16,14 +16,14 @@
           <picture>
             <source
               media="(min-width: 1200px )"
-              srcset="/img/choco-plate-desk.png"
+              srcset="/img/choco-plate-deskWeb.webp"
             />
             <source
               media="(min-width: 375px )"
-              srcset="/img/choco-plate-mob.png"
+              srcset="/img/choco-plate-mobWeb.webp"
             />
             <img
-              src="/img/choco-plate-mob.png"
+              src="/img/choco-plate-mobWeb.webp"
               alt="chocolate"
               width="264"
               loading="lazy"
@@ -55,9 +55,17 @@
       <li class="unique-item">
         <a href="" class="unique-link">
           <picture>
-            <source media="(min-width: 1200px )" srcset="/img/milk-desk.png" />
-            <source media="(min-width: 375px )" srcset="/img/milk-mob.png" />
-            <img src="/img/milk-mob.png" alt="milk" width="264" loading="lazy"
+            <source
+              media="(min-width: 1200px )"
+              srcset="/img/milk-deskWeb.webp" />
+            <source
+              media="(min-width: 375px )"
+              srcset="/img/milk-mobWeb.webp" />
+            <img
+              src="/img/milk-mobWeb.webp"
+              alt="milk"
+              width="264"
+              loading="lazy"
           /></picture>
 
           <p>MILK</p>
@@ -85,9 +93,17 @@
       <li class="unique-item">
         <a href="" class="unique-link">
           <picture>
-            <source media="(min-width: 1200px )" srcset="/img/nuts-desc.png" />
-            <source media="(min-width: 375px )" srcset="/img/nuts-mob.png" />
-            <img src="/img/nuts-mob.png" alt="nuts" width="264" loading="lazy"
+            <source
+              media="(min-width: 1200px )"
+              srcset="/img/nuts-descWeb.webp" />
+            <source
+              media="(min-width: 375px )"
+              srcset="/img/nuts-mobWeb.webp" />
+            <img
+              src="/img/nuts-mobWeb.webp"
+              alt="nuts"
+              width="264"
+              loading="lazy"
           /></picture>
 
           <p>NUTS</p>
@@ -115,10 +131,14 @@
       <li class="unique-item">
         <a href="" class="unique-link">
           <picture>
-            <source media="(min-width: 1200px )" srcset="/img/choco-desk.png" />
-            <source media="(min-width: 375px )" srcset="/img/choco-mob.png" />
+            <source
+              media="(min-width: 1200px )"
+              srcset="/img/choco-deskWeb.webp" />
+            <source
+              media="(min-width: 375px )"
+              srcset="/img/choco-mobWeb.webp" />
             <img
-              src="/img/choco-mob.png"
+              src="/img/choco-mobWeb.webp"
               alt="chocolate beans"
               width="264"
               loading="lazy"
