--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -9,11 +9,21 @@
         <iframe
           loading="lazy"
           class="iframe"
+          src="https://www.youtube.com/embed/tVZhAi6Fpx8"
+          title="Как делают шоколад ?"
+          frameborder="0"
+          allow=" autoplay; encrypted-media"
+          allowfullscreen
+        ></iframe>
+
+        <!-- <iframe
+          loading="lazy"
+          class="iframe"
           src="https://www.youtube.com/embed/J65d3aSkFwM"
           title="Шоколад | Как это устроено | Discovery"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
-        ></iframe>
+        ></iframe> -->
       </div>
       <div class="how-desk">
         <h3 class="how-subtitle">
